fixed bug on mobile view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -498,7 +498,6 @@ footer {
   .nav-link-container {
     position: absolute;
     visibility: hidden;
-    right: -100%;
     overflow: hidden;
     justify-content: center;
     text-align: center;
